# waterleaf

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  InternalUtils.cmake  README.md
src/libs/wlf_core/: Assertion.cpp  Assertions.cpp  CMakeLists.txt  MultiStopwatch.cpp  Profiling.cpp  Stopwatch.cpp
src/libs/wlf_core/include/wlf_core/: Assertion.hpp  Assertions.hpp  Benchmark.hpp  Define.hpp  Defines.hpp  Error.hpp  Invoke.hpp  MultiStopwatch.hpp  Prelude.hpp  Profiling.hpp  Stopwatch.hpp  UtilityDefines.hpp  UtilityInterfaces.hpp  UtilityWrappers.hpp
src/libs/wlf_render/: CMakeLists.txt  Dummy.cpp
src/libs/wlf_render/include/wlf_render/: Dummy.hpp
src/techdemo/: CMakeLists.txt  Main.cpp
test/: BufferingMultiStopwatchTest.cpp  BufferingStopwatchTest.cpp  CMakeLists.txt  CoreProfilingTest.cpp  DummyTest.cpp  FrameProfilerTest.cpp  FunctionProfilingTest.cpp  InvokeTest.cpp  MultiStopwatchTest.cpp  ProfilingFramePartsTest.cpp  ProfilingFunctionTest.cpp  ProfilingMultiStopwatchTest.cpp  ProfilingStopwatchTest.cpp  RecordingMultiStopwatchTest.cpp  RecordingStopwatchTest.cpp  StopwatchTest.cpp
